--- a/NetworkInterfaceConfigurator/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NetworkInterfaceConfigurator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" AllowsTransparency="true" WindowStyle="None">
     <Grid>
-        
+        <Button Margin="5">
+            123
+        </Button>
     </Grid>
 </Window>
