--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:NetworkInterfaceConfigurator"
         xmlns:viewmodel="clr-namespace:NetworkInterfaceConfigurator.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="446" Width="700" MinHeight="446" MinWidth="700" AllowsTransparency="true" WindowStyle="None">
+        x:Name="nameMainWindow"
+        Title="MainWindow" Height="446" Width="700" MinHeight="446" MinWidth="700" AllowsTransparency="true" WindowStyle="None" WindowStartupLocation="CenterScreen">
 
     <Window.DataContext>
         <viewmodel:MainViewModel />
@@ -44,7 +45,15 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid x:Name="gridAdapterSettings" Grid.Column="0">
-                        
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                            <Button 
+                                Width="100" 
+                                Height="30" 
+                                Command="{Binding CloseWin}"
+                                CommandParameter="{Binding ElementName=nameMainWindow}">
+                                Close window
+                            </Button>
+                        </StackPanel>
                     </Grid>
                     <Grid x:Name="gridAdapterStats" Grid.Column="1">
 
@@ -56,7 +65,10 @@
             </Grid>
         </Grid>
         <Grid x:Name="gridFooter" Grid.Row="2">
-            
+            <TextBlock 
+            Text="{Binding Debug}"
+            Width="Auto"
+            Height="20"/>
         </Grid>
         <!--<Button Content="123_TEST" Margin="5">
         </Button>
@@ -64,10 +76,10 @@
 
         <StackPanel>
             <TextBlock 
-            Text="{Binding Clicks}"
-            Margin="10"
-            Width="50"
-            Height="20"/>
+                Text="{Binding Clicks}"
+                Margin="10"
+                Width="50"
+                Height="20"/>
             <Button Command="{Binding ClickAdd}" Content="Button" Click="Button_Click" />
         </StackPanel>-->
 
