Add buttons Max and Min window. Add resize grip. Add border around window, with padding value:7 7 7 5

--- a/NetworkInterfaceConfigurator/App.xaml
+++ b/NetworkInterfaceConfigurator/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:NetworkInterfaceConfigurator"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Window.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
