--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:viewmodel="clr-namespace:NetworkInterfaceConfigurator.ViewModels"
         mc:Ignorable="d"
         x:Name="nameMainWindow"
-        Title="MainWindow" Height="446" Width="700" MinHeight="446" MinWidth="700" AllowsTransparency="true" WindowStyle="None" WindowStartupLocation="CenterScreen">
+        Style="{StaticResource WindowStyle}"
+        Title="MainWindow" Height="446" Width="700" MinHeight="446" MinWidth="700" WindowStartupLocation="CenterScreen">
 
     <Window.DataContext>
         <viewmodel:MainViewModel />
@@ -20,7 +21,32 @@
             <RowDefinition Height="18"/>
         </Grid.RowDefinitions>
         <Grid x:Name="gridHeader" Grid.Row="0">
-            
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1">
+                    <Button 
+                                Width="100" 
+                                Content="Min window"
+                                Command="{Binding MinWin}"
+                                CommandParameter="{Binding ElementName=nameMainWindow}">
+                    </Button>
+                    <Button 
+                                Width="100"
+                                Content="Max window"
+                                Command="{Binding MaxWin}"
+                                CommandParameter="{Binding ElementName=nameMainWindow}">
+                    </Button>
+                    <Button 
+                                Width="100"
+                                Content="Close window"
+                                Command="{Binding CloseWin}"
+                                CommandParameter="{Binding ElementName=nameMainWindow}">
+                    </Button>
+                </StackPanel>
+            </Grid>
         </Grid>
         <Grid x:Name="gridMain" Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -37,7 +63,7 @@
                     <RowDefinition Height="61"/>
                 </Grid.RowDefinitions>
                 <Grid x:Name="gridAdapterField" Grid.Row="0">
-                    
+
                 </Grid>
                 <Grid x:Name="gridAdapterData" Grid.Row="1">
                     <Grid.ColumnDefinitions>
@@ -45,30 +71,26 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid x:Name="gridAdapterSettings" Grid.Column="0">
-                        <StackPanel Orientation="Vertical" VerticalAlignment="Center">
-                            <Button 
-                                Width="100" 
-                                Height="30" 
-                                Command="{Binding CloseWin}"
-                                CommandParameter="{Binding ElementName=nameMainWindow}">
-                                Close window
-                            </Button>
-                        </StackPanel>
+                        
                     </Grid>
                     <Grid x:Name="gridAdapterStats" Grid.Column="1">
 
                     </Grid>
                 </Grid>
                 <Grid x:Name="gridAdapterButtons" Grid.Row="2">
-                    
+
                 </Grid>
             </Grid>
         </Grid>
         <Grid x:Name="gridFooter" Grid.Row="2">
-            <TextBlock 
-            Text="{Binding Debug}"
-            Width="Auto"
-            Height="20"/>
+            <StatusBar
+                Width="Auto"
+                Height="20">
+                <TextBlock Margin="3,0,0,0" Text="{Binding Debug}"/>
+                <StatusBarItem HorizontalAlignment="Right">
+                    <ResizeGrip Opacity="0.75"/>
+                </StatusBarItem>
+            </StatusBar>
         </Grid>
         <!--<Button Content="123_TEST" Margin="5">
         </Button>
@@ -82,6 +104,5 @@
                 Height="20"/>
             <Button Command="{Binding ClickAdd}" Content="Button" Click="Button_Click" />
         </StackPanel>-->
-
     </Grid>
 </Window>
