--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -1,10 +1,12 @@
-﻿<Window x:Class="NetworkInterfaceConfigurator.MainWindow"
+﻿<Window x:Class="NetworkInterfaceConfigurator.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NetworkInterfaceConfigurator"
         xmlns:viewmodel="clr-namespace:NetworkInterfaceConfigurator.ViewModels"
+        xmlns:view="clr-namespace:NetworkInterfaceConfigurator.Views"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
         x:Name="nameMainWindow"
         Style="{StaticResource WindowStyle}"
@@ -13,6 +15,15 @@
     <Window.DataContext>
         <viewmodel:MainViewModel />
     </Window.DataContext>
+
+    <i:Interaction.Triggers>
+        <!-- MouseLeftButtonDown - action of UIElement -->
+        <i:EventTrigger EventName="MouseLeftButtonDown">
+            <i:InvokeCommandAction 
+                Command="{Binding DragWindow}"
+                CommandParameter="{Binding ElementName=nameMainWindow}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
 
     <Grid x:Name="gridBase">
         <Grid.RowDefinitions>
@@ -26,24 +37,25 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1">
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1" >
                     <Button 
-                                Width="100" 
-                                Content="Min window"
-                                Command="{Binding MinWin}"
-                                CommandParameter="{Binding ElementName=nameMainWindow}">
+                        Width="100" 
+                        Content="Min window"
+                        Command="{Binding MinWin}"
+                        CommandParameter="{Binding ElementName=nameMainWindow}">
                     </Button>
                     <Button 
-                                Width="100"
-                                Content="Max window"
-                                Command="{Binding MaxWin}"
-                                CommandParameter="{Binding ElementName=nameMainWindow}">
+                        Width="100"
+                        Content="Max window"
+                        Command="{Binding MaxWin}"
+                        CommandParameter="{Binding ElementName=nameMainWindow}">
                     </Button>
                     <Button 
-                                Width="100"
-                                Content="Close window"
-                                Command="{Binding CloseWin}"
-                                CommandParameter="{Binding ElementName=nameMainWindow}">
+                        Width="100"
+                        Content="Close window"
+                        Command="{Binding CloseWin}"
+                        CommandParameter="{Binding ElementName=nameMainWindow}">
                     </Button>
                 </StackPanel>
             </Grid>
