Moved all code for window style from MainWindow.xaml to Window.xaml Add Icons for Min,Max,Close buttons. Add dependency for icon Max button. Add more fonts. Add more colors.

--- a/NetworkInterfaceConfigurator/App.xaml
+++ b/NetworkInterfaceConfigurator/App.xaml
@@ -9,7 +9,8 @@
                 <ResourceDictionary Source="Resources/Colors.xaml"/>
                 <ResourceDictionary Source="Resources/Fonts.xaml"/>
                 <ResourceDictionary Source="Resources/Icons.xaml"/>
-                
+
+                <ResourceDictionary Source="Resources/Buttons.xaml"/>
                 <ResourceDictionary Source="Resources/Window.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
