--- a/NetworkInterfaceConfigurator/Resources/Colors.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Colors.xaml
@@ -7,13 +7,28 @@
         <GradientStop Color="#4186C6" Offset="1"/>
     </LinearGradientBrush>
 
-    <SolidColorBrush x:Key="BrushLightBlue" Color="#4186C6"/>
-    <Color x:Key="ColorLightBlue">#4186C6</Color>
-    
+    <SolidColorBrush x:Key="BrushABlack" Color="#000000"/>
+    <Color x:Key="ColorABlack">#000000</Color>
+
     <SolidColorBrush x:Key="BrushAWhite" Color="#FFFFFF"/>
     <Color x:Key="ColorAWhite">#FFFFFF</Color>
 
     <SolidColorBrush x:Key="BrushWhite" Color="#FEFEFE"/>
     <Color x:Key="ColorWhite">#FEFEFE</Color>
 
+    <SolidColorBrush x:Key="BrushDarkGrey" Color="#222426"/>
+    <Color x:Key="ColorDarkGrey">#222426</Color>
+
+    <SolidColorBrush x:Key="BrushLightGrey" Color="#babcbd"/>
+    <Color x:Key="ColorLightGrey">#babcbd</Color>
+
+    <SolidColorBrush x:Key="BrushDarkBlue" Color="#24292e"/>
+    <Color x:Key="ColorDarkBlue">#24292e</Color>
+
+    <SolidColorBrush x:Key="BrushLightBlue" Color="#4186C6"/>
+    <Color x:Key="ColorLightBlue">#4186C6</Color>
+
+    <SolidColorBrush x:Key="BrushRoyalBlue" Color="#0072cf"/>
+    <Color x:Key="ColorRoyalBlue">#0072cf</Color>
+    
 </ResourceDictionary>
