--- a/NetworkInterfaceConfigurator/Resources/Icons.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Icons.xaml
@@ -8,6 +8,10 @@
     <system:Double x:Key="TranslateAppIconX">0</system:Double>
     <system:Double x:Key="TranslateAppIconY">0</system:Double>
 
+    <system:Double x:Key="ScaleWinIcon">1</system:Double>
+    <system:Double x:Key="TranslateWinIconX">0</system:Double>
+    <system:Double x:Key="TranslateWinIconY">0</system:Double>
+
     <!-- Icon -->
     <Style x:Key="AppIcon" TargetType="{x:Type Label}">
         <Setter Property="Template">
@@ -140,6 +144,106 @@
                             </Path.RenderTransform>
                         </Path>
                     </Canvas>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <!-- This Icons get "Stroke" value from buttons value "Foreground" -->
+    <Style  x:Key="MinimizeIcon" TargetType="{x:Type Label}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Label}">
+                    <Grid UseLayoutRounding="True" Margin="0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Path StrokeThickness="1"
+                            Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"
+                            Stretch="None"
+                            Data="M0,6h10">
+                            <Path.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="{StaticResource ScaleWinIcon}" ScaleY="{StaticResource ScaleWinIcon}"/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform X="{StaticResource TranslateWinIconX}" Y="{StaticResource TranslateWinIconY}"/>
+                                </TransformGroup>
+                            </Path.RenderTransform>
+                        </Path>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style  x:Key="MaximizeIconRestored" TargetType="{x:Type Label}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Label}">
+                    <Grid UseLayoutRounding="True" Margin="0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Path x:Name="MaximizeIcon"
+                            StrokeThickness="1"
+                            Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"
+                            Stretch="None"
+                            Data="M9,9H1V1h8V9z">
+                            <Path.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="{StaticResource ScaleWinIcon}" ScaleY="{StaticResource ScaleWinIcon}"/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform X="{StaticResource TranslateWinIconX}" Y="{StaticResource TranslateWinIconY}"/>
+                                </TransformGroup>
+                            </Path.RenderTransform>
+                        </Path>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style  x:Key="MaximizeIconNormal" TargetType="{x:Type Label}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Label}">
+                    <Grid UseLayoutRounding="True" Margin="0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Path x:Name="MaximizeIcon"
+                            StrokeThickness="1"
+                            Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"
+                            Stretch="None"
+                            Data="M2.2,1.3v-1.9H10v8.5H8.3 M8.3,1.3H2.2H0v8.3h8.3V1.3z">
+                            <Path.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="{StaticResource ScaleWinIcon}" ScaleY="{StaticResource ScaleWinIcon}"/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform X="{StaticResource TranslateWinIconX}" Y="{StaticResource TranslateWinIconY}"/>
+                                </TransformGroup>
+                            </Path.RenderTransform>
+                        </Path>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style  x:Key="CloseIcon" TargetType="{x:Type Label}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Label}">
+                    <Grid UseLayoutRounding="True" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Path StrokeThickness="1"
+                            Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}"
+                            Stretch="None"
+                            Data="M0,10L10,0.1 M0,0l10,10">
+                            <Path.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="{StaticResource ScaleWinIcon}" ScaleY="{StaticResource ScaleWinIcon}"/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform X="{StaticResource TranslateWinIconX}" Y="{StaticResource TranslateWinIconY}"/>
+                                </TransformGroup>
+                            </Path.RenderTransform>
+                        </Path>
+                        <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center"/>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
