Add dropdown menu for choose adapter. Add fields for adapter props in UI. Add more fonts. Add Texts.xaml Update Icons. Now icons sharper, not blurred. Change user input method for drag window. Remove DevExpress.

--- a/NetworkInterfaceConfigurator/App.xaml
+++ b/NetworkInterfaceConfigurator/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="Resources/Fonts.xaml"/>
                 <ResourceDictionary Source="Resources/Icons.xaml"/>
 
+                <ResourceDictionary Source="Resources/Texts.xaml"/>
                 <ResourceDictionary Source="Resources/Buttons.xaml"/>
                 <ResourceDictionary Source="Resources/Window.xaml"/>
             </ResourceDictionary.MergedDictionaries>
