--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -24,15 +24,22 @@
         <viewmodel:MainViewModel />
     </Window.DataContext>
 
-    <i:Interaction.Triggers>
+    <!-- For get user input, better use gesture then Interaction.Triggers -->
+    <Window.InputBindings>
+        <MouseBinding Command="{Binding DragWindow}"
+                      CommandParameter="{Binding ElementName=nameMainWindow}"
+                      Gesture="LeftClick"/>
+    </Window.InputBindings>
+    <!-- If this not necessary for other functions. Will be deleted. -->
+    <!--<i:Interaction.Triggers>-->
         <!-- Drag window -->
         <!-- MouseLeftButtonDown - action of UIElement -->
-        <i:EventTrigger EventName="MouseLeftButtonDown">
+        <!--<i:EventTrigger EventName="MouseLeftButtonDown">
             <i:InvokeCommandAction 
                 Command="{Binding DragWindow}"
                 CommandParameter="{Binding ElementName=nameMainWindow}" />
         </i:EventTrigger>
-    </i:Interaction.Triggers>
+    </i:Interaction.Triggers>-->
 
     <Grid x:Name="gridBase">
         <Grid.RowDefinitions>
@@ -53,16 +60,46 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="61"/>
                 </Grid.RowDefinitions>
-                <Grid x:Name="gridAdapterField" Grid.Row="0">
-                    
+                <Grid x:Name="gridAdapterField" Margin="20,0" Grid.Row="0">
+                    <StackPanel Margin="0, 14, 0, 0" Orientation="Vertical">
+                        <TextBlock Text="Adapter" Style="{StaticResource GridContentTitles}"/>
+                        <ComboBox>
+                            
+                        </ComboBox>
+                    </StackPanel>
                 </Grid>
                 <Grid x:Name="gridAdapterData" Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="267"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Grid x:Name="gridAdapterSettings" Grid.Column="0">
-                        
+                    <Grid x:Name="gridAdapterSettings" Margin="20, 0, 0, 0" Grid.Column="0">
+                        <StackPanel>
+                            <StackPanel Margin="0, 18, 0, 0" Orientation="Vertical">
+                                <TextBlock Text="IP" Style="{StaticResource GridContentTitles}" Margin="0, 0, 0, 3"/>
+                                <TextBlock Text="255.255.255.255" Style="{StaticResource GridContentValues}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0, 18, 0, 0" Orientation="Vertical">
+                                <TextBlock Text="Subnet" Style="{StaticResource GridContentTitles}"/>
+                                <TextBlock Text="255.255.255.255" Style="{StaticResource GridContentValues}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0, 18, 0, 0" Orientation="Vertical">
+                                <TextBlock Text="Gateway" Style="{StaticResource GridContentTitles}"/>
+                                <TextBlock Text="255.255.255.255" Style="{StaticResource GridContentValues}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0, 18, 0, 0" Orientation="Vertical">
+                                <TextBlock Text="DNS 1" Style="{StaticResource GridContentTitles}"/>
+                                <TextBlock Text="255.255.255.255" Style="{StaticResource GridContentValues}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0, 18, 0, 0" Orientation="Vertical">
+                                <TextBlock Text="DNS 2" Style="{StaticResource GridContentTitles}"/>
+                                <TextBlock Text="255.255.255.255" Style="{StaticResource GridContentValues}"/>
+                            </StackPanel>
+                            <StackPanel Margin="0, 18, 0, 0" Orientation="Vertical">
+                                <TextBlock Text="MAC" Style="{StaticResource GridContentTitles}"/>
+                                <TextBlock Text="00:00:00:00:00:00" Style="{StaticResource GridContentValues}"/>
+                            </StackPanel>
+                        </StackPanel>
                     </Grid>
                     <Grid x:Name="gridAdapterStats" Grid.Column="1">
 
